# mft

./: README.md  pyproject.toml
data/: mfs.yml
tests/: mf_compare.ipynb
