[project]
name = "mft"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "reservoirinvest", email = "reservoirinvest@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "bs4>=0.0.2",
    "yfinance>=0.2.40",
    "deprecated>=1.2.14",
    "pandas>=2.2.2",
    "jupyterlab>=4.2.4",
    "mftool>=2.8",
    "pip>=24.1.2",
    "plotly-express>=0.4.1",
    "from-root>=1.3.0",
    "loguru>=0.7.2",
    "black>=24.4.2",
    "isort>=5.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
